Trying to change favicon and other style choices

--- a/browser/js/about/about.html
+++ b/browser/js/about/about.html
@@ -1,11 +1,6 @@
 <section id="about">
     <p>
-        This website--the very one at which you currently gaze--was created by a basic scaffolding
-        concocted at Fullstack Academy. Here are some of the people who make it all very real:
+        DailySheets is a site designed for parents and daycare staff to communicate about a child's day.  Parents can log on and see about their child's day, records are kept online so it's easy to see the history of a child's day. This will be especially useful for doctor's visits and other times when parents want to see a history of their child's daily activity. This system makes it easier for our staff to keep track of an infant's day.
     </p>
-    <carousel interval="2000">
-        <slide ng-repeat="image in images">
-            <img height="300" ng-src="{{ image }}" />
-        </slide>
-    </carousel>
+    
 </section>
