--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,4 +1,4 @@
 <section id="home">
-    <fullstack-logo></fullstack-logo>
-    <rando-greeting></rando-greeting>
+    <h2>DailySheets</h2>
+    <h4>Mother Hen's Daycare Online Information System</h4>
 </section>
