--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -4,13 +4,13 @@
             <li ng-repeat="item in items" ng-show="!item.auth || isLoggedIn()">
                 <a ui-sref-active="active" ui-sref="{{ item.state }}">{{ item.label }}</a>
             </li>
-            <li ng-show="user.is_parent">
+            <li ng-show="user.isParent">
                 <a ui-sref="dailysheet" ui-sref-active="active">Daily Reports</a>
             </li>
-            <li ng-show="user.is_teacher">
+            <li ng-show="user.isTeacher">
                 <a ui-sref="classroom" ui-sref-active="active">Classroom</a>
             </li>
-            <li ng-show="user.is_admin">
+            <li ng-show="user.isAdmin">
                 <a ui-sref="register" ui-sref-active="active">Register</a>
             </li>
 
