--- a/browser/js/register/register.html
+++ b/browser/js/register/register.html
@@ -13,7 +13,7 @@
     </div>
     <div class="form-group">
         <label for="password">Password</label>
-        <input type="text" ng-model="user.password" class ="form-control" id="password">
+        <input type="password" ng-model="user.password" class ="form-control" id="password">
     </div>
     <div class="form-group">
         <span>Teacher:</span>
