changes to states, adding functionality

--- a/browser/js/classroom/classrooms.html
+++ b/browser/js/classroom/classrooms.html
@@ -2,7 +2,7 @@
 
 <div class="row" ng-repeat="classroom in classrooms">
     <h3>
-        <a ui-sref="classroom({id: classroom.id})">{{clasroom.name}}</a>
+        <a ui-sref="classroom({id: classroom.id})">{{classroom.name}}</a>
     </h3>
     <br>
     <p>{{classroom.ageRange}}</p>
