--- a/browser/js/classroom/add-class.html
+++ b/browser/js/classroom/add-class.html
@@ -1,11 +1,13 @@
-<form id="classroom" name ="classroomForm" ng-submit="sumbit(classroom)">
+<form id="classroom" name ="classroomForm" ng-submit="submit(classroom)">
     <div class="form-group">
         <label for ="name">Name</label>
         <input type="text" ng-model="classroom.name">
     </div>
     <br>
     <div class="form-group">
-        <label for="ageRange"></label>
+        <label for="ageRange">Age Range</label>
         <input type="text" ng-model="classroom.ageRange">
     </div>
+
+    <button type="submit" class="btn btn-default">Submit</button>
 </form>
