--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -8,7 +8,7 @@
                 <a ui-sref="dailysheet" ui-sref-active="active">Daily Reports</a>
             </li>
             <li ng-show="user.isTeacher">
-                <a ui-sref="classroom" ui-sref-active="active">Classroom</a>
+                <a ui-sref="classrooms" ui-sref-active="active">Classroom</a>
             </li>
             <li ng-show="user.isAdmin">
                 <a ui-sref="register" ui-sref-active="active">Register</a>
